availability forecast looks really good

--- a/app/assets/stylesheets/_ridepilot-ui-helpers.scss
+++ b/app/assets/stylesheets/_ridepilot-ui-helpers.scss
@@ -19,12 +19,12 @@ $yellow-1: $yellow;
 $yellow-2: mix($white, $yellow, 30);
 $yellow-3: mix($white, $yellow, 60);
 
-$green: #77CB8E;
+$green: #59C276;
 $green-1: $green;
 $green-2: mix($white, $green, 30);
 $green-3: mix($white, $green, 60);
 
-$blue: #77BCCB;
+$blue: #55AEC2;
 $blue-1: $blue;
 $blue-2: mix($white, $blue, 30);
 $blue-3: mix($white, $blue, 60);
