--- a/app/assets/stylesheets/ridepilot-ui.scss
+++ b/app/assets/stylesheets/ridepilot-ui.scss
@@ -55,7 +55,7 @@ form {
 
 // overriding bootstrap 
 
-.btn, .action-button, .btn.dropdown-toggle, .btn-primary, .open > .btn-primary.dropdown-toggle, input[type="submit"] {
+.btn, .action-button, .btn.dropdown-toggle, .btn-primary, .open > .btn-primary.dropdown-toggle, input[type="submit"], button[type="button"] {
 	color: $brand-primary;
 	border: 1px solid currentColor;
 	border-color: currentColor;
@@ -498,6 +498,10 @@ form {
 	}
 }
 
+.fa-remove {
+	color: $red;
+}
+
 .inputfile {
 	// adapted from demo at https://tympanus.net/Tutorials/CustomFileInputs/
   width: 0.1px;
@@ -884,12 +888,6 @@ body.availability-forecast {
   		max-width: 100%;
   	}
 
-	  .run-availability-table {
-	    margin-bottom: 0px;
-	    border-collapse: separate !important;
-	    border-spacing: 0 1em !important;
-	  }
-
 	  .th-inner {
     	width: 100%; 
     	white-space:nowrap;
@@ -901,89 +899,74 @@ body.availability-forecast {
 	    margin: 0px 0px 0px -5px;
 	  }
 
-	  a.link_disabled {
-	    pointer-events: none;
-	    cursor: default;
+	  .pull-right a[class*="unassign_"] {
+	  	padding: 1em;
 	  }
 
-	  a.link_disabled i {
-	    color: $gray-4;
-	  }
 		
-		// everything goes crazy if this goes away
-	  .run-availability-table td {
-	    padding: 0px 5px !important;
-	  }
+		.run-availability-table, .driver-availability-table {
 
-	  // .run-availability-table tr.odd {
-	  //   background: transparent;
-	  // }
-
-	  // .run-availability-table td {
-	  //   border-top: none !important;
-	  // }
-
-	  .run-availability-table td.disabled {
-	    color: $gray-4;
-	  }
-
-	  
-
-	  .run-availability-table td.chart_cell.is_filled {
-	    background-color: $purple-3;
-	  }
-
-	  .run-availability-table td.chart_cell.is_driver_filled {
-	    background-color: $purple;
-	  }
-
-	  .run-availability-table td.chart_cell.driver_not_available {
-	    background-color: $blue;
-	  }
-
-
-	  .run-availability-table a.link_disabled i {
-	    color: $gray-4;
-	  }
-
-	  .driver-availability-table {
-	    margin-bottom: 0px;
+			margin-bottom: 0px;
 	    border-collapse: separate !important;
 	    border-spacing: 0 1em !important;
-	    td {
+		
+			td {
 		    padding: 0px 5px !important;
 		  }
 
-	  }
+		  td.disabled {
+		    color: $gray-4;
+		  }
 
-	  // .driver-availability-table tr.odd {
-	  //   background: transparent;
-	  // }
+		  td.chart_cell {
+		  	white-space: nowrap !important; 
+			  &.driver_not_available {
+			    background-color: $blue;
+			  }
+		  }
 
-	  // .driver-availability-table td {
-	  //   border-top: none !important;
-	  // }
+		  a.link_disabled {
+		    pointer-events: none;
+		    cursor: default;
+		    i {
+			    color: $gray-4;
+			  }
+		  }
 
-	  // .driver-availability-table td.disabled {
-	  //   color: lightgray;
-	  // }
+		}
+		.run-availability-table {
 
+		  td.chart_cell {
+		  	white-space: nowrap !important; 
+		  	color: white;
+				&.is_filled {
+			    background-color: $purple-3;
+			  }
 
-	  // .driver-availability-table td.chart_cell.is_filled {
-	  //   background-color: #9fdbef !important;
-	  // }
+			  &.is_driver_filled {
+			    background-color: $purple;
+			  }
+			}
+		}
+		.driver-availability-table {
 
-	  // .driver-availability-table td.chart_cell.is_run_filled {
-	  //   background-color: #167ea0 !important;
-	  // }
-
-	  // .driver-availability-table td.chart_cell.driver_not_available {
-	  //   background-color: #f16969 !important;
-	  // }
-
-	  // .driver-availability-table td.chart_cell.is_disabled {
-	  //   background-color: lightgray !important;
-	  // }
+		  td.chart_cell {
+		  	white-space: nowrap !important; 
+		  	color: white;
+			  &.is_filled {
+			    background-color: $green-3;
+			  }
+			  &.is_run_filled {
+			    background-color: $green;
+			  }
+			  &.driver_not_available {
+			    background-color: $blue;
+			  }
+			  &.is_disabled {
+			    background-color: $gray-4;
+			  }
+			}
+		}
 
 	  
   }
