--- a/app/views/recurring_dispatchers/index.html.haml
+++ b/app/views/recurring_dispatchers/index.html.haml
@@ -4,8 +4,8 @@
     margin: 0px;
   }
 = render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'dispatchers'
-.col-sm-12{style: 'padding: 0px;'}
-  .pull-right
+#page-header
+  .action-buttons
     = link_to translate_helper(:daily_scheduling), dispatchers_path, class: 'btn action-button'
   = render :partial => 'filters'
 %hr
