tweaking days of week buttons in #page-header and active state a bit bolder

--- a/app/assets/stylesheets/ridepilot-ui.scss
+++ b/app/assets/stylesheets/ridepilot-ui.scss
@@ -652,10 +652,11 @@ form {
 		  }
 		  &.active {
 		  	opacity: 1;
+		  	font-weight: 600;
 		  }
 		  #page-header & {
-				padding-right: .5em;
-				padding-left: .5em;
+				padding-right: 1em;
+				padding-left: 1em;
 			}
 		}
 	}
