--- a/app/views/vehicles/index.html.haml
+++ b/app/views/vehicles/index.html.haml
@@ -1,10 +1,10 @@
 = render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'vehicles'
-#page-header.row
-  .col-sm-12{style: 'padding: 0px;'}
+#page-header
+  .action-buttons
     - if can? :create, Vehicle
       .pull-right
         = link_to translate_helper("new_vehicle_link_text"), new_vehicle_path, class: "btn action-button"
-    %h1= translate_helper("index_vehicle_heading")
+  %h1.page-title= translate_helper("index_vehicle_heading")
 .row
   .col-sm-12.pull-right
     .checkbox
