--- a/app/assets/stylesheets/ridepilot-ui.scss
+++ b/app/assets/stylesheets/ridepilot-ui.scss
@@ -452,6 +452,7 @@ form {
 	padding: 0;
 	margin: 0;
 	color: $brand-primary;
+	@include clear-after;
 	.page-title, h1 {
 		float: left;
 		margin-bottom: $content-pad;
