--- a/app/views/vehicles/_details_panel.html.haml
+++ b/app/views/vehicles/_details_panel.html.haml
@@ -2,54 +2,63 @@
   .panel-heading= translate_helper("vehicle_form_details_heading")
   .panel-body.form-horizontal
     .form-group
-      = f.label :name, translate_helper("vehicle_form_name_label"), class: "col-md-2 control-label"
-      .col-md-10
+      .form-label
+        = f.label :name, translate_helper("vehicle_form_name_label")
+      .form-field
         = f.text_field :name, class: "form-control", disabled: @readonly
     .form-group
-      = f.label :year, translate_helper("vehicle_form_year_label"), class: "col-md-2 control-label"
-      .col-md-10
+      .form-label
+        = f.label :year, translate_helper("vehicle_form_year_label")
+      .form-field
         = f.text_field :year, class: "form-control", disabled: @readonly
     .form-group
-      = f.label :make, translate_helper("vehicle_form_make_label"), class: "col-md-2 control-label"
-      .col-md-10
+      .form-label
+        = f.label :make, translate_helper("vehicle_form_make_label")
+      .form-field
         = f.text_field :make, class: "form-control", disabled: @readonly
     .form-group
-      = f.label :model, translate_helper("vehicle_form_model_label"), class: "col-md-2 control-label"
-      .col-md-10
+      .form-label
+        = f.label :model, translate_helper("vehicle_form_model_label")
+      .form-field
         = f.text_field :model, class: "form-control", disabled: @readonly
     .form-group
-      = f.label :license_plate, translate_helper("vehicle_form_license_plate_label"), class: "col-md-2 control-label"
-      .col-md-10
+      .form-label
+        = f.label :license_plate, translate_helper("vehicle_form_license_plate_label")
+      .form-field
         = f.text_field :license_plate, class: "form-control", disabled: @readonly
     .form-group
-      = f.label :vin, translate_helper("vehicle_form_vin_label"), class: "col-md-2 control-label"
-      .col-md-10
+      .form-label
+        = f.label :vin, translate_helper("vehicle_form_vin_label")
+      .form-field
         = f.text_field :vin, class: "form-control", disabled: @readonly
     .form-group
-      = f.label :vehicle_type_id, translate_helper("vehicle_form_vehicle_type_label"), class: "col-md-2 control-label"
-      .col-md-10
+      .form-label
+        = f.label :vehicle_type_id, translate_helper("vehicle_form_vehicle_type_label")
+      .form-field
         = f.collection_select :vehicle_type_id, VehicleType.for_provider(current_provider_id).default_order, :id, :name, { include_blank: true }, { class: "form-control", disabled: @readonly }
         .vehicle-capacity-configurations
           - if @vehicle.vehicle_type && @vehicle.vehicle_type.vehicle_capacity_configurations.any?
             = render 'vehicle_capacity_configurations/list', vehicle_capacity_configurations: @vehicle.vehicle_type.vehicle_capacity_configurations
     .form-group
-      = f.label :reportable, translate_helper("vehicle_form_reportable_label"), class: "col-md-2 control-label"
-      .col-md-10
+      .form-label
+        = f.label :reportable, translate_helper("vehicle_form_reportable_label")
+      .form-field
         = f.select :reportable, [["Yes", true], ["No", false]], {:selected => @vehicle.reportable }, class: "form-control", disabled: @readonly
     .form-group
-      = label_tag nil, translate_helper("vehicle_form_initial_mileage"), class: "col-md-2 control-label"
-      .col-md-10
-        %p.form-control-static
-          - if @vehicle.new_record?
-            = f.number_field :initial_mileage, min: 0, class: "form-control"
-          - else
-            = number_with_delimiter @vehicle.initial_mileage
-            mi.
-            - if @readonly && can?(:edit, @vehicle)
-              = link_to translate_helper("edit"), edit_initial_mileage_vehicle_path(@vehicle), class: "btn action-button"
+      .form-label
+        = label_tag nil, translate_helper("vehicle_form_initial_mileage")
+      .form-field
+        - if @vehicle.new_record?
+          = f.number_field :initial_mileage, min: 0, class: "form-control"
+        - else
+          = number_with_delimiter @vehicle.initial_mileage
+          mi.
+          - if @readonly && can?(:edit, @vehicle)
+            = link_to translate_helper("edit"), edit_initial_mileage_vehicle_path(@vehicle), class: "btn action-button"
     .form-group
-      = label_tag nil, translate_helper("vehicle_form_last_odometer_reading"), class: "col-md-2 control-label"
-      .col-md-10
+      .form-label
+        = label_tag nil, translate_helper("vehicle_form_last_odometer_reading")
+      .form-field
         %p.form-control-static
           = number_with_delimiter @vehicle.last_odometer_reading
           mi.
