--- a/app/views/vehicles/edit.html.haml
+++ b/app/views/vehicles/edit.html.haml
@@ -1,13 +1,11 @@
 = render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'vehicles'
-#page-header.row
-  .col-sm-12.col-md-6
-    %h1= translate_helper("edit_vehicle_heading")
-  .col-sm-12.col-md-6
+#page-header
+  %h1.page-header= translate_helper("edit_vehicle_heading")
+  .action-buttons
     - if can? :manage, @vehicle
-      .pull-right
-        %button#vehicle_form_submit.btn.action-button
-          = translate_helper("save")
-        = link_to translate_helper("cancel"), @vehicle, class: "btn action-button"
+      %button#vehicle_form_submit.btn.action-button
+        = translate_helper("save")
+      = link_to translate_helper("cancel"), @vehicle, class: "btn action-button"
 = render partial: "form"
 
 :javascript
