runs table looks much better

--- a/app/assets/stylesheets/ridepilot-ui.scss
+++ b/app/assets/stylesheets/ridepilot-ui.scss
@@ -290,6 +290,7 @@ form {
 		}
 	}
 	&.basic-table {
+		width: 100%;
 		thead {
 			border: 1px solid $white;
 			border-bottom: .75em solid $white;
