--- a/app/assets/stylesheets/_ridepilot-ui-helpers.scss
+++ b/app/assets/stylesheets/_ridepilot-ui-helpers.scss
@@ -172,19 +172,19 @@ $input-height: 34px;
 }
 
 @mixin grouped-button {
-margin: 0;
+  margin: 0;
   float: left;
   border-radius: 0px;
   border-right-width: 0px;
   &.action-button, &.dropdown-toggle, &.btn-primary, .open > &.btn-primary.dropdown-toggle {
     border-right-width: 0px;
   }
-  &:last-child {
+  &:last-of-type {
     border-right-width: 1px;
     border-top-right-radius: $button-radius;
     border-bottom-right-radius: $button-radius;
   }
-  &:first-child {
+  &:first-of-type {
     border-top-left-radius: $button-radius;
     border-bottom-left-radius: $button-radius;
   }
