--- a/app/views/providers/_sidebar.html.haml
+++ b/app/views/providers/_sidebar.html.haml
@@ -1,23 +1,4 @@
-:css
-  /* Sidebar navigation */
-  .nav-sidebar {
-    margin-right: -21px; /* 20px padding + 1px border */
-    margin-bottom: 20px;
-    margin-left: -20px;
-  }
-  .nav-sidebar > li > a {
-    padding-right: 20px;
-    padding-left: 20px;
-  }
-  .nav-sidebar > .active > a,
-  .nav-sidebar > .active > a:hover,
-  .nav-sidebar > .active > a:focus {
-    color: #fff;
-    background-color: #336699;
-  }
-
-%ul.nav.nav-sidebar
-
+%ul.provider-menu
   %li{class: action_name == "show" ? 'active' : ''}
     %a{href: provider_path(@provider)}
       = translate_helper('provider_profile_label')
