provider side menu is better
forms are still pretty messy though

--- a/app/assets/stylesheets/v1_theme.scss
+++ b/app/assets/stylesheets/v1_theme.scss
@@ -345,13 +345,13 @@ ol.section li label {
 }
 fieldset {
   clear: both;
-  background: #eee;
-  border: 1px solid #bbb;
-  padding: 15px 15px 5px;
-  margin: 0 0 20px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
+  // background: #eee;
+  // border: 1px solid #bbb;
+  // padding: 15px 15px 5px;
+  // margin: 0 0 20px;
+  // -webkit-border-radius: 5px;
+  // -moz-border-radius: 5px;
+  // border-radius: 5px;
 }
 fieldset legend {
   background: #e5f2ff;
