datepicker today gets a bg color

--- a/app/assets/stylesheets/ridepilot-ui (conflict copy from rsoll@camsys.com) (conflict copy from rsoll@camsys.com).scss
+++ b/app/assets/stylesheets/ridepilot-ui (conflict copy from rsoll@camsys.com) (conflict copy from rsoll@camsys.com).scss
@@ -736,6 +736,9 @@ form {
 		background-color: $gray-4;
 		background-image: none;
 	}
+	.ui-datepicker-today {
+		color: $yellow;
+	}
 	table th {
 		font-weight: 600;
 	}
