--- a/app/assets/stylesheets/ridepilot-ui.scss
+++ b/app/assets/stylesheets/ridepilot-ui.scss
@@ -736,6 +736,11 @@ form {
 		background-color: $gray-4;
 		background-image: none;
 	}
+	.ui-datepicker-today {
+		a {
+			background-color: $gray-3;
+		}
+	}
 	table th {
 		font-weight: 600;
 	}
